added more examples of quantitative research

--- a/index.html
+++ b/index.html
@@ -471,7 +471,13 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>What is quantitative research?</h2>
 <ul>
 <li>Empirical research tested by some quantitative comparison</li>
-<li>For example: “nouns are bigger than verbs.”</li>
+<li>For example:
+<ul>
+<li>“nouns are bigger than verbs”</li>
+<li>“length of clauses in academic writing increases with grade level”</li>
+<li>“probability of <em>estar</em> use (compared to <em>ser</em>) in L2 Spanish increases with proficiency”</li>
+<li>“measures of accuracy, fluency, and complexity increase with L2 proficiency”</li>
+</ul></li>
 </ul>
 </section>
 <section id="how-do-we-do-quantitative-research" class="slide level2">
